main/objects/TaskMatrix__mdt.object
<CustomObject>
    <description>Content of each task based on week and topic</description>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Contains topic</description>
        <label>Topic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekNum__c</fullName>
        <label>WeekNum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <label>Week Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>W1</fullName>
                    <default>true</default>
                    <label>W1</label>
                </value>
                <value>
                    <fullName>W2</fullName>
                </value>
                <value>
                    <fullName>W3</fullName>
                </value>
                <value>
                    <fullName>W4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TaskMatrix</label>
    <pluralLabel>TaskMatrix</pluralLabel>
</CustomObject>